--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <title> My resume</title>
     </header>
     <body>
-        <img src="./images/Srilu pp.jpg" height="150" alt="profile picture">
+        <img src="./Srilu pp.jpg" height="150" alt="profile picture">
         <h1>Srilakshmi Mudadla <br></h1>
         <h4> Final year, Computer Science Student.</h4></h5>
         <hr>
